flux/infrastructure/runner-system/mimir/runner-mimir-tenant-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: runner-mimir-tenant
  namespace: mimir
spec:
  type: ClusterIP
  selector:
    app: runner-mimir-tenant
  ports:
  - port: 80
    targetPort: 8080
